[gd_scene load_steps=5 format=3 uid="uid://c315cnaf08ego"]

[ext_resource type="Script" path="res://slot.gd" id="1_ph5wx"]
[ext_resource type="Texture2D" uid="uid://cj7tqe12w3kuv" path="res://Assets/Cards/UI/healthBar.png" id="3_v1x71"]
[ext_resource type="Texture2D" uid="uid://bmfdvdggfg0g" path="res://Assets/Cards/UI/healthFill.png" id="4_6l8qo"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ksrji"]
load_path = "res://.godot/imported/grey.png-746e0fb23f56e8575054c275f13eeaa7.ctex"

[node name="Slot4" type="MarginContainer"]
custom_minimum_size = Vector2(128, 174)
script = ExtResource("1_ph5wx")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2.6, 3.6)
texture = SubResource("CompressedTexture2D_ksrji")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(48, 64)
centered = false

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
visible = false
layout_mode = 2
texture_under = ExtResource("3_v1x71")
texture_progress = ExtResource("4_6l8qo")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
